Implement vga_buffer device for I/O

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,15 @@ name = "blog_os"
 version = "0.1.0"
 authors = ["Rareș Cosma <rares@getbetter.ro>"]
 edition = "2018"
+
+[dependencies]
+bootloader = "0.6.4"
+volatile = "0.2.3"
+spin = "0.4.9"
+x86_64 = "0.7.0"
+uart_16550 = "0.2.0"
+
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
+
