Add qemu_exit device for conveniently quitting QEMU once tests are done

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,10 @@ uart_16550 = "0.2.0"
 version = "1.0"
 features = ["spin_no_std"]
 
+[package.metadata.bootimage]
+test-args = [
+  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
+]
+# The QEMU isa-debug-exit device will use (code << 1 | 1) as an exit code.
+# Our success code is 0x10. Therefore, (0x10 << 1) | 1 == 33
+test-success-exit-code = 33
