--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "blog_os"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Rareș Cosma <rares@getbetter.ro>"]
 edition = "2018"
 
@@ -24,3 +24,7 @@ test-args = [
 # The QEMU isa-debug-exit device will use (code << 1 | 1) as an exit code.
 # Our success code is 0x10. Therefore, (0x10 << 1) | 1 == 33
 test-success-exit-code = 33
+
+[[test]]
+name = "panic_handler"
+harness = false
