--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,7 @@ volatile = "0.2.3"
 spin = "0.4.9"
 x86_64 = "0.7.0"
 uart_16550 = "0.2.0"
-
-[dependencies.lazy_static]
-version = "1.0"
-features = ["spin_no_std"]
+lazy_static = { version = "1.3.0", features = ["spin_no_std"] }
 
 [package.metadata.bootimage]
 test-args = [
