--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ spin = "0.4.9"
 x86_64 = "0.7.0"
 uart_16550 = "0.2.0"
 lazy_static = { version = "1.3.0", features = ["spin_no_std"] }
+pic8259_simple = "0.1.1"
 
 [package.metadata.bootimage]
 test-args = [
